--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass-migrator": "^1.5.1"
   },
   "dependencies": {
+    "@observablehq/runtime": "^5.8.2",
     "lodash": "^4.17.21",
     "reveal.js": "^4.5.0",
     "vite": "^4.0.4"
